src/components/02_molecules/footer/footer.module.scss
@use "@porsche-design-system/components-js/styles" as *;

.footer {
  @include pds-grid;
  padding-top: $pds-spacing-fluid-xx-large;
  padding-bottom: $pds-spacing-fluid-x-large;

  .left,
  .middle,
  .right {
    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
    display: flex;
    flex-direction: column;
    @include pds-media-query-max("s") {
      margin-top: $pds-spacing-static-medium;
    }
  }

  .left {
    @include pds-media-query-min("s") {
      grid-column: $pds-grid-wide-column-start / span 5;
    }

    @include pds-media-query-min("m") {
      grid-column: $pds-grid-wide-column-start / span 6;
    }

    #company-links {
      column-count: 2;

      @include pds-media-query-min-max("s", "m") {
        column-count: 1;
        column-gap: 0;
      }
    }
  }

  .middle {
    @include pds-media-query-min("s") {
      grid-column: span 4;
    }
    @include pds-media-query-min("m") {
      grid-column: span 3;
    }
  }

  .right {
    @include pds-media-query-min("s") {
      grid-column: span 6 / $pds-grid-wide-column-end;
    }
  }

  .divider {
    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
    padding: $pds-spacing-fluid-medium 0;
  }

  .notice {
    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;

    .linkBar {
      p-link-pure {
        padding: 0 $pds-spacing-fluid-x-small;
      }
    }

    #wltp {
      margin-top: $pds-spacing-fluid-medium;
      grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;

      p {
        padding: $pds-spacing-fluid-x-small 0;
      }
    }
  }

  .content {
    margin-top: $pds-spacing-static-large;

    p-link {
      width: 100%;
      margin-top: $pds-spacing-static-medium;
    }
  }

  .inline {
    display: inline-block;
    margin-right: $pds-spacing-static-medium;

    &:last-child {
      margin-right: 0;
    }
  }

  .made-with {
    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
    text-align: center;
    padding-top: $pds-spacing-fluid-medium;
  }
}

